Termino los ejercicios 1-16 de js

--- a/src/Tema11/Ejercicio7.html
+++ b/src/Tema11/Ejercicio7.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ejercicio X</title>
+  <meta name="author" content="Apolinar Zaera Sánchez">
+  <title>Ejercicio 7</title>
 </head>
 <body>
 <h1>Abriendo JavaScript en el navegador</h1>
 <p>Abre las herramientas de desarrollador (F12) para ver los console.log()</p>
 
-<script src="Ejercicio9.js"></script>
+<script src="Ejercicio7.js"></script>
 </body>
 </html>
