--- a/src/Tema11/Ejercicio9.html
+++ b/src/Tema11/Ejercicio9.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ejercicio X</title>
+  <meta name="author" content="Apolinar Zaera Sánchez">
+  <title>Ejercicio 9</title>
 </head>
 <body>
 <h1>Abriendo JavaScript en el navegador</h1>
